# VisaPredictAI

./: .coverage  .dvcignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DVC.md  LICENSE  Makefile  README.md  SECURITY.md  aggregate_seeds.py  audit_data_quality.py  build_bulletins_json.py  build_database.py  build_panel.py  config.py  data_quality_report.md  dvc.yaml  eval_deep_pi.py  export_forecasts.py  freeze_snapshots.py  improve_conformal.py  improve_fforma.py  improve_stacking.py  improve_tabpfn.py  improve_timesfm.py  make_data_figures.py  make_eda_figures.py  make_fe_figures.py  make_hero_figures.py  make_latinometrics_figures.py  make_result_figures.py  mega_audit.py  mega_audit_report.md  mlflow.db.dvc  mlops_audit_report.md  models.dvc  (+25 more)
.dvc/: config
.github/: CODEOWNERS
aws_gpu/: GUIA_EC2.md  README.md  chronos_lora.py  requirements.txt  run_frontier.sh  run_mh.sh  run_mh_emp.sh  train_gpu.py
data/: china_family_visa_backlog_timecourse.csv  china_visa_backlog_timecourse.csv  india_family_visa_backlog_timecourse.csv  india_visa_backlog_timecourse.csv  mexico_family_visa_backlog_timecourse.csv  mexico_visa_backlog_timecourse.csv  philippines_family_visa_backlog_timecourse.csv  philippines_visa_backlog_timecourse.csv  row_family_visa_backlog_timecourse.csv  row_visa_backlog_timecourse.csv  visa_panel_long.csv
docs/: ARCHITECTURE.md  CLEANING.md  CONSISTENCY.md  DEBT_BASELINE.md  DVC.md  FAILURE_MATRIX.md  FORECAST_EVAL.md  PAPER_PROSPECTIVE_DRAFT.md  PROMOTION_POLICY.md  ROADMAP.md  SECURITY_TRIAGE.md  STORAGE_POLICY.md  THREAT_MODEL.md  coverage_floors.json  data_dictionary.md  dead_code_report.md  debt_baseline.json  er_diagram.md  example_queries.sql  experiments_inventory.json  legacy_env_baseline.json  manual_conexion_duckdb.md  mlops_experimentos.md  model_catalog.json
environments/: execution_contract.json  python_profiles.json
experiments/: README.md  aggregate_seeds.py  apply_cone_constraints.py  auto_arima_baseline.py  backfill_mlflow_legacy.py  backfill_vintages.sh  build_eda_facts.py  build_eda_report.py  build_fe_facts.py  build_fe_report.py  build_horizon_facts.py  build_key_facts.py  build_model_card.py  build_release_manifest.py  check_drift.py  derive_band80_ratio.py  eval_deep_pi.py  export_forecasts.py  freeze_shadow.py  generate_web_forecasts.py  improve_conformal.py  improve_fforma.py  improve_stacking.py  improve_tabpfn.py  improve_timesfm.py  make_data_figures.py  make_eda_figures.py  make_fe_figures.py  make_gallery_figures.py  make_hero_figures.py  make_horizon_figure.py  make_latinometrics_figures.py  make_result_figures.py  make_tex_tables.py  migrate_ledger_v2.py  run_campaign.sh  run_campaign_aq.sh  run_campaign_aq_tail.sh  run_champion_challenger.py  run_champion_crps.py  (+21 more)
locks/: deep-linux-x86_64-cpu.txt  deep-linux-x86_64-cu126.txt  deep-macos-arm64.txt  dev-linux-x86_64.txt  dev.txt  dvc-tool-macos-arm64.txt  lockset.json  model-cpu-linux-x86_64.txt  model-cpu.txt  runtime-linux-x86_64.txt  runtime.txt
pipeline/: __init__.py  build_bulletins_json.py  build_database.py  build_panel.py  freeze_snapshots.py  mega_audit.py  scrape_all.py  scrape_dv_visa_bulletins.py  scrape_family_visa_bulletins.py  scrape_visa_bulletins.py
reports/: MODEL_CARD.md  auto_arima_baseline.csv  campaign_pool_DFF_employment.csv  campaign_pool_DFF_family.csv  campaign_pool_FAD_employment.csv  campaign_pool_FAD_family.csv  champion_challenger.json  champion_challenger.md  conformal_coverage.csv  crps_fad.csv  deep_pi_DFF.csv  deep_pi_FAD.csv  drift_report.json  experiment_runs.jsonl  finalist_forecasts_DFF.csv  finalist_forecasts_FAD.csv  forecast_log.csv  forecast_scorecard.csv  forecast_scorecard_meta.json  forecast_vs_actual_DFF.csv  forecast_vs_actual_FAD.csv  global_DFF_camp_auto_s1.csv  global_DFF_camp_auto_s2.csv  global_DFF_camp_auto_s3.csv  global_DFF_camp_auto_s4.csv  global_DFF_camp_diff_s2.csv  global_DFF_camp_diff_s3.csv  global_DFF_camp_diffls_s3.csv  global_DFF_camp_diffls_s4.csv  global_DFF_camp_levels_s1.csv  global_DFF_camp_levels_s2.csv  global_DFF_camp_levels_s4.csv  global_DFF_camp_levels_s5.csv  global_DFF_dff_s1.csv  global_DFF_dff_s3.csv  global_DFF_dff_s4.csv  global_DFF_dff_s5.csv  global_DFF_dff_s7.csv  global_DFF_dff_s8.csv  global_DFF_dffauto_s1.csv  (+42 more)
requirements/: deep-linux-cpu.in  deep-linux-cu126.in  deep.in  dvc.in
security/: campaign_bundle_contract.json  ci_install_registry.json  commit_frontier_fingerprints.json  deep_smoke_contract.json  github_actions.json  governance_inputs.json  governance_snapshot_consumers.json  python_advisories.json  python_reflection_registry.json  repository_governance.json  upstream_warnings.json  warnings_registry.json
tests/: conftest.py  dbfixtures.py  model_regression_baseline.json  test_aggregate_seeds.py  test_architecture.py  test_atomic_fs.py  test_audit_supply_chain.py  test_b233_receipt.py  test_campaign_bundle.py  test_campaign_bundle_contract.py  test_campaign_completeness.py  test_campaign_hashing.py  test_campaign_helpers.py  test_campaign_manifest.py  test_campaign_state.py  test_champion.py  test_chronos_loader_hardened.py  test_ci_private_temp.py  test_cleaning.py  test_commit_frontier_gate.py  test_config_report.py  test_contracts.py  test_core_brutal.py  test_cron_publish.py  test_database.py  test_database_migrations.py  test_database_timestamps.py  test_dataset.py  test_decisions_i18n.py  test_deep_authority.py  test_deep_smoke.py  test_drift.py  test_dvc_tool.py  test_eda_facts.py  test_eda_preprocess.py  test_eda_report.py  test_ens_brutal.py  test_ensemble.py  test_execution_contract.py  test_extraction.py  (+56 more)
tools/: atomic_fs.py  audit_python_supply_chain.py  campaign_bundle.py  campaign_bundle_contract_smoke.py  campaign_hashing.py  campaign_manifest.py  campaign_state.py  capture_b233_receipt.py  check_action_pins.py  check_campaign_completeness.py  check_ci_installs.py  check_commit_frontier.py  check_consistency.py  check_contracts.py  check_coverage_floors.py  check_debt.py  check_deep_authority.py  (+45 more)
(+253 files in other folders)
