[project]
name = "visapredictai"
version = "1.0.0"
description = "Scraper and longitudinal panel of the U.S. Visa Bulletin (VisaPredict AI · MIAAD/UACJ)."
requires-python = ">=3.14"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Javier Augusto Rebull Saucedo" }]
dependencies = [
    "beautifulsoup4==4.14.3",
    "matplotlib==3.10.8",
    "pandas==3.0.0",
    "requests==2.32.5",
    "tqdm==4.67.3",
]

[project.optional-dependencies]
# Single source of truth for the dev toolchain — Makefile and CI install via
# `pip install -e .[dev]`, so a version bump happens here and nowhere else.
dev = ["ruff==0.15.17", "mypy==2.1.0", "pytest==9.1.0", "pytest-cov==7.1.0"]

[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# Flat layout: only the importable libraries are packaged; the scrapers/audits/
# visualizers are run as scripts (`python build_panel.py`), not imported.
py-modules = ["config", "visa_common"]

[tool.ruff]
line-length = 120
target-version = "py314"
extend-exclude = ["ante", "data", "figures", "tests/fixtures"]

[tool.ruff.lint]
# E/W pycodestyle, F pyflakes, I import-sort, UP pyupgrade, B bugbear.
select = ["E4", "E7", "E9", "F", "W", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# Audit/analysis scripts favor dense one-liners and f-strings for report text.
"mega_audit.py" = ["E741"]
"audit_data_quality.py" = ["E741"]

[tool.mypy]
python_version = "3.14"
ignore_missing_imports = true   # no pandas/bs4 stubs installed
exclude = ['ante', 'tests/fixtures']

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "-q",
    "--cov=visa_common",
    "--cov=scrape_visa_bulletins",
    "--cov=scrape_family_visa_bulletins",
    "--cov-report=term-missing",
]

[tool.coverage.report]
show_missing = true
skip_empty = true
# Executable coverage floor on the parsing modules (current ~70%). Set with
# margin so minor churn doesn't break CI, but erosion below it is blocked.
fail_under = 65
